# embedded_cv

./: .gitignore  BlurFrameFilter.cpp  BlurFrameFilter.h  CLA.md  CMakeLists.txt  COMMERCIAL-LICENSE.md  Calibrate.cpp  Calibrate.h  CalibrateFrameCollector.cpp  CalibrateFrameCollector.h  CalibrateMapper.cpp  CalibrateMapper.h  Calibrator.cpp  Calibrator.h  CvCommandHandler.cpp  CvCommandHandler.h  DisparityEvaluator.cl  DisparityEvaluator.cpp  DisparityEvaluator.h  DisparityEvaluator3ch.cl  Dockerfile  ImageProcessor.cpp  ImageProcessor.h  LICENSE  MatStorage.cpp  OnlineCalibration.cpp  OnlineCalibration.h  QuickStereoMatch.cpp  QuickStereoMatch.h  README.md  aarch64-linux-gnu.toolchain.cmake  build_amd64.sh  build_arm.sh  build_arm_docker.sh  calib.cpp  calibrator.cpp  classes_calibrator.puml  classes_main.puml  classes_mini_server.puml  classes_ws_ctl.puml  (+7 more)
.github/workflows/: cla.yml
benchmark/: KitDisparityBenchmark.cpp  KitDisparityBenchmark.h  benchmark.cpp
data/: extrinsics.yml  intrinsics.yml
hw_ctl/: CMakeLists.txt  build_arm.sh  build_arm_docker.sh  main.cpp
mini_server/: BroadcastingServer.cpp  BroadcastingServer.h  CMakeLists.txt  CallbackHandler.cpp  CallbackHandler.h  CommandServer.cpp  CommandServer.h  Encapsulation.h  IpcServer.cpp  IpcServer.h  SocketFactory.cpp  SocketFactory.h
src/calibrator/: BlurFrameFilter.cpp  BlurFrameFilter.h  CalibrateFrameCollector.cpp  CalibrateFrameCollector.h  CalibrateMapper.cpp  CalibrateMapper.h  CalibrationStrategy.cpp  CalibrationStrategy.h  Calibrator.cpp  Calibrator.h  CalibratorMulticam.cpp  CalibratorMulticam.h  GridPreferredSizeProvider.cpp  GridPreferredSizeProvider.h  MultiCameraCalibration.cpp  MultiCameraCalibration.h  SingleCameraThread.cpp  SingleCameraThread.h  StatStreaming.h  calib.cpp
src/capture/: SocketCapture.cpp  SocketCapture.h  capture.cpp
src/cl/: DisparityEvaluator.cl  DisparityEvaluator3ch.cl  opencl_ide_defs.h
src/common/: CaptureInfo.h  Defer.h  MatStorage.cpp  MatStorage.h  Process.cpp  Process.h  RemoteView.cpp  RemoteView.h  Telemetry.cpp  Telemetry.h
src/cv/: CvCommandHandler.cpp  CvCommandHandler.h  DisparityEvaluator.cl  DisparityEvaluator.cpp  DisparityEvaluator.h  cv.cpp  opencl_ide_defs.h
src/mini_server/: Encapsulation.h  HandlerInterface.h  IpcServer.cpp  IpcServer.h  SocketFactory.cpp  SocketFactory.h
srs/: build.sh  cross_build.sh  cross_build_docker.sh  srs.sh
tests/calibrator/: CalibrateFrameCollectorTest.cpp  CalibrationStrategyTest.cpp  StatStreamingTest.cpp
tests/calibrator/fixtures/: frameData0.yaml
ws_ctl/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  SocketProxy.cpp  SocketProxy.h  WsHandler.cpp  WsHandler.h  build_arm.sh  build_arm_docker.sh  main.cpp  package.json
ws_ctl/web/: CMakeLists.txt  _error.html  app.js  error.css  index.html  index2.html  package.json  stats.html  style.css
ws_ctl/web/css/: style.css
ws_ctl/web/js/: CalibrationMode.js  Logger.js  Socket.js  Status.js  Telemetry.js  Viewport.js  ViewportInteractiveStream.js  ViewportStream.js  Viewports.js  app.js
